Add logic to skip checks if inside station